# tetriste

./: .gitignore  CMakeLists.txt  CONVENTIONS.md  Makefile  README.MD  TAGS  current.txt  exatio.txt  main.c  rankings.txt  test.txt  tetriste.c  tetriste.h
raylib/include/: raylib.h
src/: main.c  tetriste.c  tetriste.h
src/cli/: tetriste_cli.c  tetriste_cli.h
src/gui/: tetriste_gui.c  tetriste_gui.h
src/gui/audio/: audio.c  audio.h
src/gui/screens/: screen_difficulty.c  screen_gameplay.c  screen_input.c  screen_main.c  screen_pause.c  screen_ranking.c  screen_title.c  screen_winloss.c  screens.h
